delete handler written. front end corresponding function working

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: #7BEF68;
+  background-color: #7bef68;
   
 }
 
