--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+/* defaults: justify-content = flex-start, align-items = stretch, flex-wrap = no-wrap  
+*/
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+body {
+  font-family: 'Righteous', cursive;
+}
+
 .App {
   text-align: center;
   background-color: skyblue;
@@ -6,6 +14,7 @@
 .garden-body {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   flex-wrap: wrap;
   background-color: #7bef68;
   
@@ -13,14 +22,45 @@
 
 
 
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  /* width: 35vw; */
+  /* border-radius: 50%; */
+  /* background-color: rgb(243, 243, 75); */
+  /* color: white; */
+}
 
 
+.dig-button {
+  background-color: rgb(243, 243, 75);
+  border: none;
+  color: black;
+  border-radius: 30px;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  padding: 15px;
+}
+ .dig-button:hover {
+  background-color: gold;
+  border: 1px dotted goldenrod;
+ }
 
 
+.harvest-button {
+  background-color: rgb(243, 243, 75);
+  border: none;
+  color: black;
+  border-radius: 15px;
+  padding: 5px;
+}
 
-
-
-
+.harvest-button:hover {
+  background-color: rgba(255, 217, 0, 0.904);
+}
 
 
 
